# filter_learning_framework

./: .gitignore  Orchestratore.py  README.md  dataset_analysis.ipynb  filters.py  pyproject.toml  trainer.py  training.ipynb  utils.py  yolo_training.ipynb
resources/: tree.mmd
src/: dataset.py  filters.py  orchestrator.py  trainer.py  yolo.py
