[project]
name = "siv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kagglehub>=0.4.2",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "optuna>=4.7.0",
    "optuna-dashboard>=0.20.0",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "torchmetrics[detection]>=1.8.2",
    "tqdm>=4.67.1",
    "ultralytics>=8.4.9",
]
